--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -99,3 +99,27 @@ nav .logo {
 .home .cover {
   width: 800px;
 }
+
+/* Form */
+form {
+  display: flex;
+  justify-content: space-around;
+  width: 90%;
+}
+
+form textarea {
+  resize: none;
+  font-family: "Manjari", sans-serif;
+}
+
+.toppings {
+  display: flex;
+  flex-direction: column;
+  margin: 10px 0;
+}
+
+.toppings span {
+  display: flex;
+  justify-content: space-between;
+  width: 350px;
+}
